# rlox

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  README.md  bench.sh  bench_table.py  build.sh  justfile  perf.sh  test-lox.sh
.cargo/: config.toml
.forgejo/workflows/: ci.yaml
bytecode/: Cargo.toml
bytecode/src/: chunk.rs  compile.rs  lib.rs  value.rs  vm.rs
compiler/: Cargo.toml
compiler/src/: builtin.rs  chunk.rs  compile.rs  lib.rs  obj_map.rs  object.rs  value.rs  vm.rs
interpreter/: Cargo.toml
interpreter/src/: ast.rs  call.rs  int.rs  lexer.rs  lib.rs  parser.rs  resolver.rs
rlox/: Cargo.toml
rlox/src/: main.rs
scanner/: Cargo.toml
scanner/src/: lexer.rs  lib.rs
src/: ast.rs  call.rs  env.rs  int.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolver.rs
