[package]
name = "rlox"
version = "0.1.0"
edition = "2024"
description = "Lox language rust implementation"
authors = ["Alexander Egorov <egoroff@gmail.com>"]
repository = "https://git.egoroff.spb.ru/root/rlox"

[dependencies]
bugreport = "0.5.1"
clap = { version = "4.5.34", features = ["std", "color", "suggestions", "cargo"] }
miette = { version = "7.5.0", features = ["fancy"] }

[dev-dependencies]
test-case = "3.3.1"