[workspace]
resolver = "3"
members = [
  "compiler",
  "interpreter",
  "scanner",
  "rlox",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# to be able to run with `cargo run`, `check` and so on without selecting a specific package with `-p`
default-members = [
  "rlox",
]

[profile.release]
strip = true
codegen-units = 1
panic = 'abort'
lto = true


[workspace.dependencies]
miette = { version = "7.6.0", features = ["fancy"] }


[workspace.lints.rust]
unsafe_code = "forbid"