[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
scanner = { path = "../scanner" }
miette = { workspace = true, features = ["fancy"] }
thiserror = { workspace = true }
num-derive = "0.4.2"
num-traits = "0.2.19"

[dev-dependencies]
test-case = "3.3.1"

[features]
disassembly = []