[package]
name = "rlox"
version = "0.1.0"
edition = "2024"
description = "Lox language rust implementation"
authors = ["Alexander Egorov <egoroff@gmail.com>"]
repository = "https://git.egoroff.spb.ru/egr/rlox"

[dependencies]
interpreter = { path = "../interpreter" }
compiler = { path = "../compiler" }
bugreport = "0.6.0"
clap = { version = "4.6.1", features = ["std", "color", "suggestions", "cargo"] }
miette = { workspace = true, features = ["fancy"] }

[features]
disassembly = ["compiler/disassembly"]
